# pokedex-rs

./: README.md  default.nix  flake.nix
pokedex-rs/: Cargo.toml
pokedex-rs/src/: arg_parser.rs  main.rs
pokedex-rs/src/api_calls/: mod.rs
pokedex-rs/src/data_structures/: mod.rs  pokemon.rs  pokemon_species.rs  pokemon_types.rs
