[package]
name = "pokedex-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version ="4.5.39", features = ["derive"] }
crossterm = { version = "0.29.0"}
image = "0.25.6"
reqwest = "0.12.15"
serde = { version = "1.0", features = ["derive" ] }
serde_json = "1.0"


tokio = { version = "1", features = ["full"] }
viuer = "0.9.1"
